# Python-2026

./: cmd.txt  main.py  pyproject.toml
.github/workflows/: docs.yml
docs/source/: conf.py  index.rst
test/: test_1.py
