[project]
name = "python-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "pytest>=9.0.2",
    "sphinx>=7.0.0,<9.0.0",
    "sphinx-rtd-theme>=3.0.0rc1",
]
